--- a/Bai 13/Bài-13-Mảng-1/Bài 3.html
+++ b/Bai 13/Bài-13-Mảng-1/Bài 3.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-  let c =[4,65,1,22,5,7,8,321,6];
-    c.sort(function(a,b){return b - a});
-    document.write(c)
+  let a =["ge5rt","vupoa3"];
+  let b=a.join();
+  document.write("Số kí tự trong chuỗi là :" + b.length);
 </script>
 </body>
 </html>
