--- a/Bai 13/Bài-13-Mảng-1/Bài 4.html
+++ b/Bai 13/Bài-13-Mảng-1/Bài 4.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 <body>
 <script>
   let a =["tun24","2372904HByuitreF","3427"]
   let b=a.toString();
-  let c=b.replace(/[^a-z]/g,"");
+  let c=b.replace(/[^0-9]/g,"");
   let dem= c.length;
   document.write(dem);
 </script>
