--- a/Bai 13/Incacso_nguyentotren_1mang.html
+++ b/Bai 13/Incacso_nguyentotren_1mang.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-  let a = [1,4,8,2,6,0,16,15,18,20];
+  let a = [1,4,8,2,6,11,13,16,15,18,20,4,5,6,7,8,9,];
   for (let i = 0; i < a.length; i++) {
       let check = true;
       for (let j = 2; j < a[i]; j++) {
